--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 A program aiming to make it easy to change power mode manully like power-profiles-daemon, but basing op TLP.
 Only systemd init is supported. For other init, please start tlp-switch-daemon by root.
+If anyone writes scipts to make it work in other inits please tell me.
 
 INSTALL:
 chmod 755 ./install
